# textllm

./: .gitignore  AGENTS.md  changelog.md  license  manual_tests.md  pyproject.toml  readme.md  run_test.sh  test_textllm.py  textllm.py
docs/: design.md  format_spec.md  manual_tests.md  migration_litellm.md  roadmap.md  template_defaults.md  testing_strategy.md
testresources/img/: template.md
